chore: fix spacing with footer contact info

--- a/my-app/src/Contact.css
+++ b/my-app/src/Contact.css
@@ -1,17 +1,14 @@
 .contact-info {
   margin-left: 5%;
-  margin-top: 10%;
   text-align: left;
-  margin-bottom: 5%;
 }
 .contact-info a {
   color: aliceblue;
+  font-size: 0.8em;
 }
 
 .contact-info h2 {
   font-size: 2.5em;
-  text-align: left;
-  margin-left: 10px;
 }
 
 .contact-info h3 {
